# artery

./: .clang-format  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .nedfolders  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  README.txt  Vagrantfile  artery.kdev4  build.py  conandata.yml  conanfile.py  configure  mkdocs.yml  opp_cmake.py  vanetza_asn1_cpm_32bit-objectID.patch
docs/: README.md  architecture.md  custom-simulation.md  devcontainers.md  index.md  install.md  literature.md  mkdocs.md  mkdocs.yml  pyproject.toml  questions-n-answers.md  requirements.txt  vscode.md
docs/assets/: vagrant.webm
docs/features/: gemv2.md  middleware.md  storyboard.md
docs/includes/: abbreviations.md
docs/website/: README.md  architecture.md  custom-simulation.md  install.md  legal.md  pyproject.toml  vscode.md
scenarios/: .gitignore  CMakeLists.txt
scenarios/2cars_2rsu_coperception/: 2cars_2rsu_coperception.sumocfg  Town04.net.xml  omnetpp.ini
scenarios/2cars_no_rsu_coperception/: 2cars_no_rsu_coperception.poly.xml  2cars_no_rsu_coperception.sumocfg  omnetpp.ini
scenarios/3cars_coperception/: 3cars_coperception.sumocfg  omnetpp.ini
scenarios/4cars_coperception/: 4cars_coperception.poly.xml  4cars_coperception.rou.xml  4cars_coperception.sumocfg  omnetpp.ini  services.xml
scenarios/artery/: CMakeLists.txt  config.xml  envmod_vehicles.xml  erlangen.launchd.xml  omnetpp.ini  regions_of_interest.xml  sensors.xml  services-envmod.xml  services-mco.xml  services-rsu.xml  services-transfusion.xml  services-type-filter.xml  services.xml  transfusion.ini  vehicles.xml
scenarios/car2car-grid/: grid.sumo.cfg  net.net.xml  omnetpp.ini  route.rou.alt.xml  route.rou.xml  services.xml  summary.R  tools.R  trips.trips.xml
scenarios/car_rsu_traffic_coperception/: car_rsu_traffic_coperception.poly.xml  car_rsu_traffic_coperception.rou.xml  car_rsu_traffic_coperception.sumocfg  omnetpp.ini
scenarios/cooperative_intersection/: cooperative_intersection.rou.xml  cooperative_intersection.sumocfg  omnetpp.ini  services.xml
scenarios/envmod/: CMakeLists.txt  intersection.net.xml  intersection.rou.xml  intersection.sumocfg  omnetpp.ini  services.xml
scenarios/gemv2/: CMakeLists.txt  LOS.net.xml  LOS.rou.xml  LOS.sumo.cfg  NLOSb1.net.xml  NLOSb1.poly.xml  NLOSb1.rou.xml  NLOSb1.sumo.cfg  NLOSb2.net.xml  NLOSb2.poly.xml  NLOSb2.rou.xml  NLOSb2.sumo.cfg  NLOSf.poly.xml  NLOSf.sumo.cfg  NLOSv.net.xml  NLOSv.rou.xml  NLOSv.sumo.cfg  omnetpp.ini
scenarios/highway-police/: CMakeLists.txt  ClearLaneService.cc  ClearLaneService.h  ClearLaneService.ned  PoliceClearLane.msg  PoliceService.cc  PoliceService.h  PoliceService.ned  PoliceServiceEnvmod.cc  PoliceServiceEnvmod.h  PoliceServiceEnvmod.ned  PoliceServiceExtended.cc  PoliceServiceExtended.h  PoliceServiceExtended.ned  PoliceServiceStoryboard.cc  PoliceServiceStoryboard.h  PoliceServiceStoryboard.ned  highway.net.xml  highway.rou.xml  highway.sumocfg  omnetpp.ini  omnetppExtended.ini  sensors.xml  services-envmod.xml  services-storyboard.xml  services.xml  servicesExtended.xml  story.py
scenarios/lte-blackice/: BlackIceCentral.cc  BlackIceCentral.h  BlackIceCentral.ned  BlackIceReporter.cc  BlackIceReporter.h  BlackIceReporter.ned  BlackIceWarner.cc  BlackIceWarner.h  BlackIceWarner.ned  BlackIceWarnerD2D.cc  BlackIceWarnerD2D.h  BlackIceWarnerD2D.ned  BlackIceWarning.msg  CMakeLists.txt  blackice.py  grid.net.xml  grid.rou.xml  grid.sumocfg  lte_channel.xml  lte_network.xml  omnetpp.ini
scenarios/most/: most.roi_parking.xml  omnetpp.ini  roi_parking.xml  roi_urban.xml  sensors.xml  services.xml
scenarios/ots-demo/: omnetpp.ini  ots-network.xml  services.xml
scenarios/python-service/: limassol.net.xml  limassol.rou.xml  limassol.sumocfg  omnetpp.ini  service.py  services.xml
scenarios/realistic_town06_cosim/: ArteryManager.cc  ArteryManager.h  CMakeLists.txt  omnetpp.ini  realistic_town06_cosim.rou.xml  realistic_town06_cosim.sumocfg  services.xml  simdata
scenarios/ros/: omnetpp.ini  services.xml
scenarios/rsu_check/: ArteryManager.cc  ArteryManager.ned  CMakeLists.txt  omnetpp.ini  rsu_check.net.xml  rsu_check.rou.xml  rsu_check.sumocfg
scenarios/rsu_grid/: CMakeLists.txt  RSUGenerator.py  grid_scenario.sumocfg  omnetpp.ini  rsusensors.xml  rsuservices.xml  services.xml  vehicles.xml
scenarios/simulte/: omnetpp.ini  services.xml  simulte.net.xml  simulte.rou.xml  simulte.sumo.cfg
scenarios/single_town06_cosim/: CMakeLists.txt  omnetpp.ini  single_town06_cosim.poly.xml  single_town06_cosim.sumocfg
scenarios/storyboard/: CMakeLists.txt  config.xml  demo.py  den-use-cases.xml  omnetpp.ini  services.xml
scenarios/testbed/: CMakeLists.txt  ingolstadt-north-netedit.net.xml  ingolstadt-north-netedit.rou.xml  ingolstadt-north.net.xml  ingolstadt-north.poly.xml  ingolstadt-north.rou-self.xml  ingolstadt-north.rou-self_moreCars.xml  ingolstadt-north.rou.xml  ingolstadt-north.sumocfg  ingolstadt-north.tll.xml  ingolstadt-north.trips.xml  ingolstadt-north.typ.xml  ingolstadt-north_moreCars.sumocfg  ingolstadt.rou.alt.xml  ingolstadt.rou.xml  omnetpp.ini  services.xml  stripOutput.py  vtype.add.xml
scenarios/transfusion/: CMakeLists.txt  LoopbackWorld.ned  omnetpp.ini
scenarios/v2xp_datadump_town06_carla/: omnetpp.ini  services.xml  v2xp_datadump_town06_carla.rou.xml  v2xp_datadump_town06_carla.sumocfg
src/artery/: CMakeLists.txt  StaticNodeManager.cc  StaticNodeManager.h  StaticNodeManager.ned  package.ned
src/cavise/: .dockerignore  .gitignore  CMakeLists.txt  Init.cc  Init.h  package.ned
src/ots/: BasicGtuLifecycleController.cc  BasicGtuLifecycleController.h  BasicGtuLifecycleController.ned  CMakeLists.txt  Connector.ned  Core.cc  Core.h  Core.ned  GtuCreationPolicy.h  GtuCreationPolicy.ned  GtuLifecycleController.ned  GtuObject.cc  GtuObject.h  GtuSink.h  README.md  RadioEndpoint.h  RadioMessage.cc  RadioMessage.h  UniformGtuCreationPolicy.cc  UniformGtuCreationPolicy.h  UniformGtuCreationPolicy.ned  package.ned
src/traci/: API.cc  API.h  Angle.cc  Angle.h  BasicNodeManager.h  (+83 more)
(+826 files in other folders)
